--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style1.css">
 	<title></title>
 </head>
 <body>
-	<h1>Hello</h1>
+	<h1>Var #4 Kovalev D.P. IU4-12</h1>
+	<div>
+		<h2>Task 1</h2>
+		<h3 id = "h3">h3</h3>
+		<h4 id = "h4">h4</h4>
+		<h5 id = "h5">h5</h5>
+	</div>
+	<div>
+		<h2>Task 2</h2>
+		<table>
+			<tr>
+				<td> 11 </td> <td> 21 </td> <td> 31 </td>
+			</tr>
+			<tr>
+				<td class = "t"> 12 </td> <td class = "t"> 22 </td> <td class = "t"> 32 </td>
+			</tr>
+			<tr>
+				<td class = "t"> 13 </td> <td class = "t"> 23 </td> <td class = "t"> 33 </td>
+			</tr>
+	</div>
+	<div>
+		<h2>Task 3</h2>
+		<ul>
+			<li class = "u">
+				<ol class = "o">
+					<li> 1 </li>
+					<li> 2 </li>
+					<li> 3 </li>
+				</ol>
+			</li>
+			<li class = "u">
+				<ol class = "o">
+					<li> 1 </li>
+					<li> 2 </li>
+					<li> 3 </li>
+					<li> 4 </li>
+				</ol>
+			</li>
+		</ul>
+
+
+	</div>
 </body>
 </html>
